# PyAvatar

./: .deepsource.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  PLANNING.md  README.md  SECURITY.md  __init__.py  __main__.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.bat  run_tests.sh  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/agents/: api-agent.md  docs-agent.md  lint-agent.md  test-agent.md
.github/workflows/: cla.yml  codeql-analysis.yml  docker-publish.yml  push-to-pypi.yml  pylint.yml  pytest.yml  test.yml
PyAvatar/: images.py  links.py
docs/: CUSTOMIZATION.md  README.md  TESTING.md  USAGE.md
docs/legal/: CLA_ENTITY.md  CLA_INDIVIDUAL.md  EULA.md  PRIVACY.md  TERMS.md
tests/: conftest.py  test_avatars.py  test_images.py  test_integration.py  test_links.py  test_main.py  test_main_pytest.py
